[aliases]
test = pytest

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --verbose -r s

[versioneer]
VCS = git
style = pep440
versionfile_source = gwcosmology/_version.py
versionfile_build = gwcosmology/_version.py
tag_prefix = v
parentdir_prefix = gwcosmology-

[coverage:run]
source = gwcosmology
omit =
	gwcosmology/tests/*
	gwcosmology/_version.py

[metadata]
license_file = LICENSE
